Added site footer

--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -16,6 +16,7 @@
 @use 'views/components/list/icon-element-list';
 @use 'views/components/toolbar/account-sidebar';
 @use 'views/components/toolbar/content-sidebar';
+@use 'views/components/toolbar/footer';
 @use 'views/layouts/logging';
 @use 'views/layouts/toolbars';
 @use 'views/pages/blog-post-form';
