--- a/views/components/form/searchbar.pug
+++ b/views/components/form/searchbar.pug
@@ -1,7 +1,7 @@
 mixin searchbar(placeholder, attrs={})
     .searchbar&attributes(attrs)
         .searchbar__icon
-            img(src=icons.searchIcon)
+            img(src=images.searchIcon)
         input.searchbar__input(
             name='content', 
             type='text', 
