--- a/views/layouts/author.pug
+++ b/views/layouts/author.pug
@@ -6,7 +6,7 @@ block navbar
     .navbar__left
         +iconElement(
             'button',
-            icons.burgerIcon,
+            images.burgerIcon,
             null,
             {
                 'class': [
@@ -17,7 +17,7 @@ block navbar
         )
         +iconElement(
             'a',
-            icons.favicon, 
+            images.favicon, 
             'Tech Stack',
             {
                 'href': '/',
@@ -54,7 +54,7 @@ block navbar
         
         +iconElement(
             'button',
-            icons.profileIcon,
+            images.profileIcon,
             null,
             {
                 'class': [
