--- a/views/layouts/toolbars.pug
+++ b/views/layouts/toolbars.pug
@@ -6,3 +6,4 @@ block content
     .navbar-dropdown-container.-gone
     .page-container
         block sidebars
+    include ../components/toolbar/footer
