--- a/views/pages/blogPost.pug
+++ b/views/pages/blogPost.pug
@@ -16,7 +16,7 @@ block page
                     .blog-post__metadata
                         .blog-post__author-details
                             - const author = blogPost.author
-                            - let profileIcon = icons.profileIcon
+                            - let profileIcon = images.profileIcon
 
                             if author.profile_pic
                                 - const profilePic = author.profile_pic
