--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -399,6 +399,32 @@
   display: none;
 }
 
+.footer {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  width: 100%;
+  padding: 1rem;
+  border-top: 2px solid rgb(36, 36, 36);
+}
+.footer__logo-title {
+  display: flex;
+  justify-content: center;
+}
+.footer__site-description {
+  display: flex;
+  justify-content: center;
+  margin: 0;
+}
+.footer__associated-media {
+  display: flex;
+  justify-content: center;
+}
+.footer__copyright {
+  margin: 0;
+  text-align: center;
+}
+
 .logging-page {
   display: flex;
   flex-direction: column;
