--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -36,7 +36,7 @@
   overflow: hidden;
   margin: 0;
   font-size: 1.5rem;
-  word-break: break-all;
+  word-break: break-word;
 }
 .blog-post-card__preview {
   display: -webkit-box;
@@ -175,7 +175,7 @@
 .blog-post-fragment__title {
   font-size: 1.5rem;
   font-weight: bold;
-  word-break: break-all;
+  word-break: break-word;
 }
 .blog-post-fragment__thumbnail {
   display: flex;
@@ -225,6 +225,7 @@
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 2;
   overflow: hidden;
+  word-break: break-word;
 }
 .icon-element.-avatar .icon-element__icon > img {
   border-radius: 50%;
@@ -318,7 +319,7 @@
   overflow: hidden;
   flex: 3;
   font-size: 1.2rem;
-  word-break: break-all;
+  word-break: break-word;
 }
 .blog-post-item__date-group {
   flex: 1;
@@ -618,7 +619,7 @@
   margin: 0;
   border-bottom: 6px solid rgb(36, 36, 36);
   font-size: 3rem;
-  word-break: break-all;
+  word-break: break-word;
 }
 .blog-post__metadata {
   display: flex;
@@ -670,6 +671,7 @@
 }
 .user-blog-posts-page__heading {
   text-align: center;
+  word-break: break-word;
 }
 .user-blog-posts-page__toolbar {
   display: flex;
@@ -738,13 +740,14 @@
 .profile__username {
   font-size: 1.5rem;
   font-weight: bold;
-  word-break: break-all;
+  word-break: break-word;
 }
 .profile__heading {
   margin-bottom: 1rem;
   font-size: 1.2rem;
   font-weight: bold;
   border-bottom: 2px solid rgb(36, 36, 36);
+  word-break: break-word;
 }
 .profile__body {
   margin: 0;
