--- a/public/stylesheets/views/components/card/_blog-post-card.scss
+++ b/public/stylesheets/views/components/card/_blog-post-card.scss
@@ -45,7 +45,7 @@
         
         margin: 0;
         font-size: fSizes.$larger;
-        word-break: break-all;
+        word-break: break-word;
     }
 
     &__preview {
