--- a/public/stylesheets/views/components/list/_blog-post-list.scss
+++ b/public/stylesheets/views/components/list/_blog-post-list.scss
@@ -33,7 +33,7 @@
 
         flex: 3;
         font-size: fSizes.$large;
-        word-break: break-all;
+        word-break: break-word;
     }
 
     &__date-group {
