--- a/public/stylesheets/views/pages/_blog-post.scss
+++ b/public/stylesheets/views/pages/_blog-post.scss
@@ -30,7 +30,7 @@
         margin: 0;
         border-bottom: 6px solid colors.$bg2;
         font-size: fSizes.$xxlarge;
-        word-break: break-all;
+        word-break: break-word;
     }
 
     &__metadata {
