--- a/public/stylesheets/views/components/toolbar/_content-sidebar.scss
+++ b/public/stylesheets/views/components/toolbar/_content-sidebar.scss
@@ -1,5 +1,5 @@
-@use '../../../globals/colors';
-@use '../../../globals/font-sizes' as fSizes;
+@use '../../../globalVars/colors';
+@use '../../../globalVars/font-sizes' as fSizes;
 
 .content-sidebar {
     left: 0;
