--- a/public/stylesheets/views/components/form/_logging-form.scss
+++ b/public/stylesheets/views/components/form/_logging-form.scss
@@ -1,4 +1,4 @@
-@use '../../../globals/font-sizes' as fSizes;
+@use '../../../globalVars/font-sizes' as fSizes;
 
 .logging-form {
     display: flex;
