--- a/public/stylesheets/views/components/list/_blog-post-list.scss
+++ b/public/stylesheets/views/components/list/_blog-post-list.scss
@@ -1,6 +1,6 @@
-@use '../../../globals/colors';
-@use '../../../globals/font-sizes' as fSizes;
-@use '../../../mixins/text-cutoff';
+@use '../../../globalVars/colors';
+@use '../../../globalVars/font-sizes' as fSizes;
+@use '../../../globalMixins/text-cutoff';
 
 .blog-post-list {
     .blog-post-item:last-child {
@@ -30,7 +30,6 @@
 
     &__title {
         @include text-cutoff.cut(3);
-
         flex: 3;
         font-size: fSizes.$large;
         word-break: break-word;
