--- a/public/stylesheets/views/components/toolbar/_account-sidebar.scss
+++ b/public/stylesheets/views/components/toolbar/_account-sidebar.scss
@@ -1,6 +1,6 @@
-@use '../../../globals/colors';
-@use '../../../globals/font-sizes' as fSizes;
-@use '../../../globals/icon-sizes' as iSizes;
+@use '../../../globalVars/colors';
+@use '../../../globalVars/font-sizes' as fSizes;
+@use '../../../globalVars/icon-sizes' as iSizes;
 
 .account-sidebar {
     right: 0;
