--- a/public/stylesheets/views/layouts/_toolbars.scss
+++ b/public/stylesheets/views/layouts/_toolbars.scss
@@ -1,6 +1,7 @@
-@use '../../globals/colors';
-@use '../../globals/font-sizes' as fSizes;
-@use '../../globals/icon-sizes' as iSizes;
+@use '../../globalVars/colors';
+@use '../../globalVars/break-points' as bp;
+@use '../../globalVars/font-sizes' as fSizes;
+@use '../../globalVars/icon-sizes' as iSizes;
 
 $navbar-height: 8vh;
 $navbar-min-height: 4rem;
@@ -92,4 +93,10 @@ $navbar-min-height: 4rem;
 .navbar-dropdown {
     width: 100%;
     overflow-y: auto;
+}
+
+@media (max-width: bp.$bp1) {
+    .page-container {
+        width: 100%;
+    }
 }
