--- a/public/stylesheets/views/pages/_user-profile.scss
+++ b/public/stylesheets/views/pages/_user-profile.scss
@@ -1,6 +1,6 @@
-@use '../../globals/colors';
-@use '../../globals/icon-sizes' as iSizes;
-@use '../../globals/font-sizes' as fSizes;
+@use '../../globalVars/colors';
+@use '../../globalVars/icon-sizes' as iSizes;
+@use '../../globalVars/font-sizes' as fSizes;
 
 
 .profile-page {
