--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -424,47 +424,6 @@
   gap: 2rem;
 }
 
-.account-sidebar {
-  right: 0;
-  border-left: 2px solid rgb(36, 36, 36);
-}
-.account-sidebar__overview {
-  margin-bottom: 1rem;
-  padding-bottom: 1rem;
-  border-bottom: 2px solid rgb(36, 36, 36);
-}
-.account-sidebar__signup-prompt {
-  height: 50%;
-}
-.account-sidebar__logout {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 1rem;
-  padding-top: 1rem;
-  border-top: 2px solid rgb(36, 36, 36);
-  font-size: 1.2rem;
-}
-.account-sidebar.-closed {
-  display: none;
-}
-
-.content-sidebar {
-  left: 0;
-  border-right: 2px solid rgb(36, 36, 36);
-}
-.content-sidebar__heading {
-  margin-bottom: 1rem;
-  font-size: 1.2rem;
-  border-bottom: 2px solid rgb(36, 36, 36);
-}
-.content-sidebar__section {
-  margin-bottom: 1rem;
-}
-.content-sidebar.-closed {
-  display: none;
-}
-
 .footer {
   display: flex;
   flex-direction: column;
@@ -491,26 +450,23 @@
   text-align: center;
 }
 
-.logging-page {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
+.navbar-dropdown {
   width: 100%;
+  overflow-y: auto;
 }
-.logging-page__container {
+
+.navbar-dropdown-container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  min-height: 26rem;
-  width: 32rem;
-  margin-bottom: 5%;
-  padding: 4rem;
+  position: fixed;
+  z-index: 1;
+  height: 20rem;
+  width: 50%;
+  min-width: 40rem;
+  padding: 1rem;
+  padding-top: calc(max(8vh, 4rem) + 1rem);
   border: 2px solid rgb(36, 36, 36);
-}
-.logging-page__heading {
-  margin-top: 0;
+  background-color: black;
+  overflow: hidden;
 }
 
 .navbar {
@@ -522,7 +478,7 @@
   height: 8vh;
   min-height: 4rem;
   width: 100%;
-  z-index: 10;
+  z-index: 100;
   border-bottom: 2px solid rgb(36, 36, 36);
   background-color: black;
 }
@@ -545,57 +501,118 @@
   gap: 2rem;
 }
 
-.page-container {
+.sidebar {
+  width: 100%;
+  overflow-y: auto;
+  padding: 1rem;
+}
+.sidebar__account-section, .sidebar__content-section {
+  width: 100%;
+}
+.sidebar__expandable {
   display: flex;
   justify-content: center;
-  min-height: 100vh;
-  width: 80%;
+  gap: 1rem;
+  width: 100%;
+}
+.sidebar__collapsable {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+.sidebar__heading {
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin: 0;
+}
+.sidebar__subheading {
+  margin-bottom: 1rem;
+  font-size: 1.2rem;
+  border-bottom: 2px solid rgb(36, 36, 36);
+}
+.sidebar__subsection {
+  margin-bottom: 1rem;
+}
+.sidebar__profile-overview {
+  margin-bottom: 1rem;
+  padding-bottom: 1rem;
+  border-bottom: 2px solid rgb(36, 36, 36);
+}
+.sidebar__logout {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 1rem;
+  padding-top: 1rem;
+  border-top: 2px solid rgb(36, 36, 36);
+  font-size: 1.2rem;
 }
 
-.sidebar {
+.sidebar-container {
+  display: flex;
+  flex-direction: column;
   position: fixed;
+  top: 0;
+  left: 0;
   height: 100%;
   width: 25%;
-  padding: 1rem;
+  padding-top: calc(max(8vh, 4rem) + 1rem);
   z-index: 10;
   background-color: black;
   border-bottom: 2px solid rgb(36, 36, 36);
-}
-.sidebar__title {
-  font-size: 1.5rem;
-  font-weight: bold;
-  margin-bottom: 1rem;
-  border-bottom: 4px solid rgb(36, 36, 36);
+  border-right: 2px solid rgb(36, 36, 36);
+  overflow: hidden;
 }
 
-.signup-prompt {
+.account-prompt {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   gap: 1rem;
+  padding-top: 1rem;
   font-size: 1.2rem;
 }
-
-.navbar-dropdown-container {
+.account-prompt__login, .account-prompt__signup {
   display: flex;
-  position: fixed;
-  z-index: 1;
-  height: 20rem;
-  width: 50%;
-  min-width: 40rem;
-  padding-top: calc(max(8vh, 4rem) + 1rem);
-  padding-bottom: 1rem;
-  padding-left: 1rem;
-  padding-right: 1rem;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  width: 100%;
+  padding: 1rem;
   border: 2px solid rgb(36, 36, 36);
-  background-color: black;
-  overflow: hidden;
+}
+.account-prompt__text {
+  text-align: center;
 }
 
-.navbar-dropdown {
+.logging-page {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
   width: 100%;
-  overflow-y: auto;
+}
+.logging-page__container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-height: 26rem;
+  width: 32rem;
+  margin-bottom: 5%;
+  padding: 4rem;
+  border: 2px solid rgb(36, 36, 36);
+}
+.logging-page__heading {
+  margin-top: 0;
+}
+
+.page-container {
+  display: flex;
+  justify-content: center;
+  min-height: 100vh;
+  width: 80%;
 }
 
 @media (max-width: 768px) {
