--- a/public/stylesheets/views/components/form/_searchbar.scss
+++ b/public/stylesheets/views/components/form/_searchbar.scss
@@ -1,6 +1,6 @@
-@use '../../../globalVars/colors';
-@use '../../../globalVars/font-sizes' as fSizes;
-@use '../../../globalVars/icon-sizes' as iSizes;
+@use '../../../globalSassVars/colors';
+@use '../../../globalSassVars/font-sizes' as fSizes;
+@use '../../../globalSassVars/icon-sizes' as iSizes;
 
 
 .searchbar {
