--- a/public/stylesheets/views/components/toolbar/_navbar-dropdown.scss
+++ b/public/stylesheets/views/components/toolbar/_navbar-dropdown.scss
@@ -1,5 +1,5 @@
-@use '../../../globalVars/colors';
-@use '../../../globalVars/layout';
+@use '../../../globalSassVars/colors';
+@use '../../../globalSassVars/layout';
 
 .navbar-dropdown {
     width: 100%;
