--- a/views/components/card/blogPostCard.pug
+++ b/views/components/card/blogPostCard.pug
@@ -40,8 +40,7 @@ mixin blogPostCard(blogPost, attrs={})
             'iconElementList': {
               'class': [
                 '-center',
-                '-column',
-                '-gap-medium'
+                '-column'
               ]
             },
             'iconElement': {
