--- a/views/components/toolbar/navbar.pug
+++ b/views/components/toolbar/navbar.pug
@@ -23,6 +23,7 @@ mixin navbar(isAuthorMode)
                 {
                     'href': '/',
                     'class': [
+                        'navbar__index-link',
                         '-gap-small'
                     ]
                 }
