--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -1,6 +1,5 @@
-@use 'globalVars/colors';
-@use 'globalVars/font-sizes' as fSizes;
-@use 'globalVars/icon-sizes' as iSizes;
+@use 'globalSassVars/colors';
+@use 'globalSassVars/font-sizes' as fSizes;
 @use 'views/components/card/blogPostCard/blog-post-card';
 @use 'views/components/card/comment-card';
 @use 'views/components/form/form-input';
