--- a/public/stylesheets/views/components/fragment/_blog-post-fragment.scss
+++ b/public/stylesheets/views/components/fragment/_blog-post-fragment.scss
@@ -1,4 +1,4 @@
-@use '../../../globalVars/font-sizes' as fSizes;
+@use '../../../globalSassVars/font-sizes' as fSizes;
 
 .blog-post-fragment {
     display: flex;
