--- a/public/stylesheets/views/components/icon/_icon-element.scss
+++ b/public/stylesheets/views/components/icon/_icon-element.scss
@@ -1,5 +1,5 @@
-@use '../../../globalVars/font-sizes' as fSizes;
-@use '../../../globalVars/icon-sizes' as iSizes;
+@use '../../../globalSassVars/font-sizes' as fSizes;
+@use '../../../globalSassVars/icon-sizes' as iSizes;
 @use '../../../globalMixins/text-cutoff';
 
 .icon-element {
