--- a/public/stylesheets/views/components/list/_blog-post-list.scss
+++ b/public/stylesheets/views/components/list/_blog-post-list.scss
@@ -1,5 +1,5 @@
-@use '../../../globalVars/colors';
-@use '../../../globalVars/font-sizes' as fSizes;
+@use '../../../globalSassVars/colors';
+@use '../../../globalSassVars/font-sizes' as fSizes;
 @use '../../../globalMixins/text-cutoff';
 
 .blog-post-list {
