--- a/public/stylesheets/views/pages/_blog-post-form.scss
+++ b/public/stylesheets/views/pages/_blog-post-form.scss
@@ -1,6 +1,6 @@
-@use '../../globalVars/font-sizes' as fSizes;
-@use '../../globalVars/icon-sizes' as iSizes;
-@use '../../globalVars/colors';
+@use '../../globalSassVars/font-sizes' as fSizes;
+@use '../../globalSassVars/icon-sizes' as iSizes;
+@use '../../globalSassVars/colors';
 
 .blog-post-form-page {
     display: flex;
