--- a/public/stylesheets/views/components/toolbar/_navbar-dropdown.scss
+++ b/public/stylesheets/views/components/toolbar/_navbar-dropdown.scss
@@ -1,5 +1,6 @@
 @use '../../../globalSassVars/colors';
 @use '../../../globalSassVars/layout';
+@use '../../../globalSassVars/break-points' as bp;
 
 .navbar-dropdown {
     width: 100%;
@@ -10,12 +11,17 @@
     display: flex;
     position: fixed;
     z-index: 1;
-    height: 20rem;
-    width: 50%;
-    min-width: 40rem;
+    height: 50vh;
+    width: 60%;
     padding: 1rem;
     padding-top: calc(max(layout.$navbar-height, layout.$navbar-min-height) + 1rem);
     border: 2px solid colors.$bg2;
     background-color: colors.$bg0;
     overflow: hidden;
+}
+
+@media (max-width: bp.$bp1) {
+    .navbar-dropdown-container {
+        width: 100%;
+    }
 }
