--- a/public/stylesheets/views/layouts/_logging.scss
+++ b/public/stylesheets/views/layouts/_logging.scss
@@ -1,4 +1,5 @@
 @use '../../globalSassVars/colors';
+@use '../../globalSassVars/break-points' as bp;
 
 .logging-page {
     display: flex;
@@ -21,5 +22,11 @@
 
     &__heading {
         margin-top: 0;
+    }
+}
+
+@media (max-width: bp.$bp0) {
+    .logging-page__container {
+        width: 100%;
     }
 }
